tests/snapshots/integration__integration_tests__push__push_error_not_fast_forward.snap
---
source: tests/integration_tests/push.rs
info:
  program: wt
  args:
    - step
    - push
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mCan't push to local [1mmain[22m branch: it has newer commits[39m
[107m [0m  * [33m5ca21c8[m Main commit

💡 [2mUse 'wt step rebase' or 'wt merge' to rebase onto main[22m
